--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "vlad@difogic.com",
   "license": "MIT",
   "dependencies": {
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "qs": "^6.9.4"
   },
   "devDependencies": {
     "standard": "^15.0.1"
